plugins {
    id 'org.springframework.boot' version '2.7.8'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'java'
    id 'maven-publish'
}

group = 'com.accendl'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
    maven {
        name = 'myRepo'
        url = "https://accendl-maven.pkg.coding.net/repository/mymavenrepo/myweibo"
        credentials {
            username "myweibo-1660661200164"
            password "639a9df034c0cb9c14b6ff8c7ad130fff8cce3c4"
        }
    }
}

dependencies {
    implementation 'org.apache.dubbo:dubbo-spring-boot-starter:3.1.6'
    implementation 'com.alibaba.boot:nacos-config-spring-boot-starter:0.2.12'
    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery:2021.0.4.0'
    implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-config:2021.0.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.1'
    implementation 'org.apache.dubbo:dubbo-registry-nacos:3.1.6'
//    implementation 'io.seata:seata-spring-boot-starter:1.6.1'

    implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
    implementation 'com.mysql:mysql-connector-j:8.0.31'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'

    implementation 'io.netty:netty-all:4.1.87.Final'

    implementation('io.seata:seata-spring-boot-starter:1.6.1') {
        exclude group: 'com.alibaba', module: 'druid'
    }

    implementation project(":account-interface")

    implementation 'org.springframework.boot:spring-boot-starter'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

publishing {
    publications {
        myLibrary(MavenPublication) {
            artifact tasks.named("jar")
        }
    }

    repositories {
        maven {
            name = 'myRepo'
            url = "https://accendl-maven.pkg.coding.net/repository/mymavenrepo/myweibo"
            credentials {
                username "myweibo-1660661200164"
                password "639a9df034c0cb9c14b6ff8c7ad130fff8cce3c4"
            }
        }
    }
}

java {
    //withJavadocJar()
    // withSourcesJar()
}

tasks.named("bootJar") {
    archiveClassifier = 'boot'
}

tasks.named("jar") {
    archiveClassifier = ''
}

tasks.named("test") {
    jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
    jvmArgs('--add-opens', 'java.base/java.math=ALL-UNNAMED')
    jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
}

